# temperature-prediction

./: .pylintrc  README.md  pyproject.toml
data_preparation/: data_load.py
databases_manipulation/: databases_queries.py
keras_regression_model/: keras_regression_functions.py
models/: 8033_best_model_20221024-151616.pickle
temperature_prediction/data_preparation/: data_load.py
temperature_prediction/databases_manipulation/: databases_queries.py
temperature_prediction/keras_regression_model/: keras_regression_functions.py
temperature_prediction/training_models/: forecasting_temperature_keras_neural_network_model.py  forecasting_temperature_keras_neural_network_model_mlflow.py  forecasting_temperature_regression_model.py
training_models/: forecasting_temperature_keras_neural_network_model.py  forecasting_temperature_regression_model.py
